--- a/package.json
+++ b/package.json
@@ -9,21 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.0",
-    "body-parser": "^1.18.2",
-    "compress-images": "^1.1.8",
     "connect-flash": "^0.1.1",
-    "ejs": "^2.5.7",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
-    "method-override": "^2.3.10",
-    "mongoose": "^4.13.7",
-    "mozjpeg": "^5.0.0",
-    "multer": "^1.3.0",
-    "nodemailer": "^4.4.1",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.12.11",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.4.0",
+    "passport-local-mongoose": "^6.1.0",
     "recaptcha-middleware": "^2.0.0"
   }
 }
