--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fishingbakersfieldv2",
+  "name": "fishing-information",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,18 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "express-mongo-sanitize": "^2.1.0",
-    "express-session": "^1.17.2",
+    "express-session": "^1.18.1",
     "helmet": "^4.6.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.12.11",
-    "multer": "^1.4.2",
-    "passport": "^0.4.0",
+    "mongoose": "^9.1.5",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
-    "recaptcha-middleware": "^2.0.0"
+    "passport-local-mongoose": "^9.0.1"
   }
 }
