--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -17,10 +18,10 @@
     "express-session": "^1.18.1",
     "helmet": "^4.6.0",
     "method-override": "^3.0.0",
-    "mongoose": "^9.1.5",
+    "mongoose": "^8.21.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^9.0.1"
+    "passport-local-mongoose": "^8.0.0"
   }
 }
